# jrpg-experiment

./: CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md
assets/: ASSET_SPECS.md
include/: dialog.h
src/: battle_scene.cpp  battle_scene.h  camera.cpp  camera.h  character_stats.cpp  character_stats.h  dialog_scene.cpp  dialog_scene.h  enemy.cpp  enemy.h  enemy_formation.cpp  enemy_formation.h  equipment.cpp  equipment.h  exploration_scene.cpp  exploration_scene.h  game.cpp  game.h  inventory.cpp  inventory.h  item.cpp  item.h  menu_scene.cpp  menu_scene.h  npc.cpp  npc.h  party.cpp  party.h  party_member.cpp  party_member.h  player.cpp  player.h  scene.h  scene_manager.cpp  scene_manager.h  shop.cpp  shop.h  shop_scene.cpp  shop_scene.h  skill.cpp  (+7 more)
